gitflow-feature-stash: swagger
- Swagger da Api Decretações
- AI chat [trabalhando]
