# SDC/storage/api-docs/api-docs.json
@@ -1389,7 +1389,16 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/ProcessoDecretacaoItem"
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": true
+                                        },
+                                        "data": {
+                                            "$ref": "#/components/schemas/ProcessoDecretacaoItem"
+                                        }
+                                    },
+                                    "type": "object"
                                 }
                             }
                         }
@@ -4002,53 +4011,197 @@
                 "type": "object"
             },
             "ProcessoDecretacaoItem": {
+                "title": "Processo de Decretacao (formato plano)",
                 "properties": {
                     "id": {
                         "type": "integer",
-                        "example": 1
+                        "example": 261
                     },
-                    "municipio_id": {
+                    "uf": {
+                        "type": "string",
+                        "example": "MG"
+                    },
+                    "municipio": {
+                        "type": "string",
+                        "example": "Ouro Verde de Minas",
+                        "nullable": true
+                    },
+                    "codigo_ibge": {
+                        "type": "string",
+                        "example": "3146206",
+                        "nullable": true
+                    },
+                    "macroregiao": {
+                        "type": "string",
+                        "example": "JEQUITINHONHAMUCURI",
+                        "nullable": true
+                    },
+                    "latitude": {
+                        "type": "string",
+                        "example": "-18.",
+                        "nullable": true
+                    },
+                    "longitude": {
+                        "type": "string",
+                        "example": "-41.",
+                        "nullable": true
+                    },
+                    "latitude_dec": {
+                        "type": "number",
+                        "format": "float",
+                        "example": -18.07,
+                        "nullable": true
+                    },
+                    "longitude_dec": {
+                        "type": "number",
+                        "format": "float",
+                        "example": -41.269722,
+                        "nullable": true
+                    },
+                    "data_registro": {
+                        "type": "string",
+                        "format": "date",
+                        "example": "2026-12-30",
+                        "nullable": true
+                    },
+                    "data_criacao": {
+                        "type": "string",
+                        "format": "date-time",
+                        "example": "2026-01-30T11:28:56.000000Z",
+                        "nullable": true
+                    },
+                    "deletado": {
+                        "type": "boolean",
+                        "example": false
+                    },
+                    "data_delecao": {
+                        "type": "string",
+                        "format": "date-time",
+                        "nullable": true
+                    },
+                    "protocolo": {
+                        "type": "string",
+                        "example": "MG-F-3146206-13214-20260121",
+                        "nullable": true
+                    },
+                    "cobrade": {
+                        "type": "string",
+                        "example": "1.3.2.1.4",
+                        "nullable": true
+                    },
+                    "tipo_desastre": {
+                        "type": "string",
+                        "example": "Tempestade local: chuvas intensas.",
+                        "nullable": true
+                    },
+                    "status": {
+                        "type": "string",
+                        "example": "Reconhecido pelo Estado e pela Uniao",
+                        "nullable": true
+                    },
+                    "data_fato": {
+                        "type": "string",
+                        "format": "date",
+                        "example": "2026-01-21",
+                        "nullable": true
+                    },
+                    "data_decreto_municipal": {
+                        "type": "string",
+                        "format": "date",
+                        "example": "2026-01-22",
+                        "nullable": true
+                    },
+                    "data_publicacao_mg": {
+                        "type": "string",
+                        "format": "date",
+                        "example": "2026-01-22",
+                        "nullable": true
+                    },
+                    "prazo_vigencia_dias": {
                         "type": "integer",
-                        "example": 123
+                        "example": 180,
+                        "nullable": true
+                    },
+                    "data_vencimento": {
+                        "type": "string",
+                        "format": "date",
+                        "example": "2026-07-21",
+                        "nullable": true
+                    },
+                    "dias_restantes": {
+                        "type": "integer",
+                        "example": 85,
+                        "nullable": true
+                    },
+                    "tipo_decreto": {
+                        "type": "string",
+                        "enum": [
+                            "SE",
+                            "ECP"
+                        ],
+                        "example": "SE",
+                        "nullable": true
                     },
                     "processo": {
                         "type": "string",
-                        "example": "MUNICIPAL"
-                    },
-                    "reconhecimento": {
-                        "type": "string",
-                        "example": "SE"
-                    },
-                    "tipo_desastre_id": {
-                        "type": "integer",
-                        "example": 5
-                    },
-                    "situacao_anormalidade": {
-                        "type": "string",
-                        "example": "SE"
-                    },
-                    "data_entrada": {
-                        "type": "string",
-                        "format": "date",
-                        "example": "2025-01-15"
-                    },
-                    "n_protocolo_fide": {
-                        "type": "string",
-                        "example": "2025.001.001",
+                        "example": "MUNICIPAL",
                         "nullable": true
                     },
                     "analista": {
                         "type": "string",
-                        "example": "joao.silva",
+                        "example": "SC Cristina",
                         "nullable": true
                     },
-                    "created_at": {
-                        "type": "string",
-                        "format": "date-time"
+                    "obitos": {
+                        "type": "integer",
+                        "example": 0
                     },
-                    "updated_at": {
-                        "type": "string",
-                        "format": "date-time"
+                    "feridos": {
+                        "type": "integer",
+                        "example": 0
+                    },
+                    "desalojados": {
+                        "type": "integer",
+                        "example": 39
+                    },
+                    "desabrigados": {
+                        "type": "integer",
+                        "example": 12
+                    },
+                    "desaparecidos": {
+                        "type": "integer",
+                        "example": 0
+                    },
+                    "outros_afetados": {
+                        "type": "integer",
+                        "example": 2680
+                    },
+                    "danos_humanos_quantidade": {
+                        "type": "integer",
+                        "example": 2731
+                    },
+                    "danos_materiais_danificadas": {
+                        "type": "integer",
+                        "example": 22
+                    },
+                    "danos_materiais_destruidas": {
+                        "type": "integer",
+                        "example": 0
+                    },
+                    "danos_materiais_valor": {
+                        "type": "number",
+                        "format": "float",
+                        "example": 122000
+                    },
+                    "prejuizos_publicos_valor": {
+                        "type": "number",
+                        "format": "float",
+                        "example": 71400
+                    },
+                    "prejuizos_privados_valor": {
+                        "type": "number",
+                        "format": "float",
+                        "example": 2100
                     }
                 },
                 "type": "object"
@@ -4145,6 +4298,7 @@
                 "type": "object"
             },
             "DecretacaoPowerBIExport": {
+                "title": "Export Power BI Decretacoes",
                 "properties": {
                     "success": {
                         "type": "boolean",
@@ -4153,166 +4307,7 @@
                     "data": {
                         "type": "array",
                         "items": {
-                            "properties": {
-                                "id": {
-                                    "type": "integer",
-                                    "example": 261
-                                },
-                                "uf": {
-                                    "type": "string",
-                                    "example": "MG"
-                                },
-                                "municipio": {
-                                    "type": "string",
-                                    "example": "Ouro Verde de Minas"
-                                },
-                                "codigo_ibge": {
-                                    "type": "string",
-                                    "example": "3146206"
-                                },
-                                "macroregiao": {
-                                    "type": "string",
-                                    "example": "JEQUITINHONHAMUCURI"
-                                },
-                                "latitude": {
-                                    "type": "string",
-                                    "example": "-18."
-                                },
-                                "longitude": {
-                                    "type": "string",
-                                    "example": "-41."
-                                },
-                                "latitude_dec": {
-                                    "type": "number",
-                                    "format": "float",
-                                    "example": -18.07
-                                },
-                                "longitude_dec": {
-                                    "type": "number",
-                                    "format": "float",
-                                    "example": -41.27
-                                },
-                                "data_registro": {
-                                    "type": "string",
-                                    "format": "date",
-                                    "example": "2026-12-30"
-                                },
-                                "data_criacao": {
-                                    "type": "string",
-                                    "format": "date-time"
-                                },
-                                "deletado": {
-                                    "type": "boolean",
-                                    "example": false
-                                },
-                                "data_delecao": {
-                                    "type": "string",
-                                    "format": "date-time",
-                                    "nullable": true
-                                },
-                                "protocolo": {
-                                    "type": "string",
-                                    "example": "MG-F-3146206-13214-20260121"
-                                },
-                                "cobrade": {
-                                    "type": "string",
-                                    "example": "1.3.2.1.4"
-                                },
-                                "tipo_desastre": {
-                                    "type": "string",
-                                    "example": "Tempestade local: chuvas intensas."
-                                },
-                                "status": {
-                                    "type": "string",
-                                    "example": "Reconhecido pelo Estado e pela Uniao"
-                                },
-                                "data_fato": {
-                                    "type": "string",
-                                    "format": "date",
-                                    "example": "2026-01-21"
-                                },
-                                "data_decreto_municipal": {
-                                    "type": "string",
-                                    "format": "date"
-                                },
-                                "data_publicacao_mg": {
-                                    "type": "string",
-                                    "format": "date"
-                                },
-                                "prazo_vigencia_dias": {
-                                    "type": "integer",
-                                    "example": 180
-                                },
-                                "data_vencimento": {
-                                    "type": "string",
-                                    "format": "date"
-                                },
-                                "dias_restantes": {
-                                    "type": "integer",
-                                    "example": 124
-                                },
-                                "tipo_decreto": {
-                                    "type": "string",
-                                    "example": "SE"
-                                },
-                                "processo": {
-                                    "type": "string",
-                                    "example": "MUNICIPAL"
-                                },
-                                "analista": {
-                                    "type": "string",
-                                    "example": "SC Cristina"
-                                },
-                                "obitos": {
-                                    "type": "integer",
-                                    "example": 0
-                                },
-                                "feridos": {
-                                    "type": "integer",
-                                    "example": 0
-                                },
-                                "desalojados": {
-                                    "type": "integer",
-                                    "example": 39
-                                },
-                                "desabrigados": {
-                                    "type": "integer",
-                                    "example": 12
-                                },
-                                "desaparecidos": {
-                                    "type": "integer",
-                                    "example": 0
-                                },
-                                "outros_afetados": {
-                                    "type": "integer",
-                                    "example": 2680
-                                },
-                                "danos_humanos_quantidade": {
-                                    "type": "integer",
-                                    "example": 2731
-                                },
-                                "danos_materiais_danificadas": {
-                                    "type": "integer",
-                                    "example": 22
-                                },
-                                "danos_materiais_destruidas": {
-                                    "type": "integer",
-                                    "example": 0
-                                },
-                                "danos_materiais_valor": {
-                                    "type": "number",
-                                    "example": 122000
-                                },
-                                "prejuizos_publicos_valor": {
-                                    "type": "number",
-                                    "example": 71400
-                                },
-                                "prejuizos_privados_valor": {
-                                    "type": "number",
-                                    "example": 2100
-                                }
-                            },
-                            "type": "object"
+                            "$ref": "#/components/schemas/ProcessoDecretacaoItem"
                         }
                     }
                 },
